(test
 (name tests)
 (libraries fpse-order-book.order_book_lib
          fpse-order-book.database
          fpse-order-book.utils
          core
          ounit2
          core_unix
          qcheck)
 (link_flags
  (-cclib -Wl,-rpath,/opt/homebrew/Cellar/postgresql@16/16.6/lib
  -cclib -L/opt/homebrew/Cellar/postgresql@16/16.6/lib)))
